<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/grey_900">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="80dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="50dp">

        <ImageView android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/seed"
            android:layout_gravity="center"/>

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_seed"
            android:textColor="@color/grey_300"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_name">

            <EditText android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_500"
                android:textColor="@color/grey_300"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">


            <LinearLayout android:id="@+id/btnCancelar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:orientation="vertical"
                android:gravity="center">
                <android.support.v7.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/back" />
                </android.support.v7.widget.CardView>
                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/back"
                    android:paddingTop="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/grey_300"/>

           </LinearLayout>


        <LinearLayout android:id="@+id/btnAceptar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:gravity="center">
            <android.support.v7.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:cardCornerRadius="20dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/save"/>
            </android.support.v7.widget.CardView>
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/save"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/grey_300"/>

        </LinearLayout>

        </LinearLayout>

        </LinearLayout>

</android.support.v7.widget.CardView>
    </LinearLayout>